<resources>
    <string name="app_name">Story App</string>

    <string name="login">login</string>
    <string name="register">Register</string>

    <string name="error_empty">Do not input blank on highlighted red field</string>
    <string name="error_password">Password must be at least 6 characters long</string>
    <string name="error_email">Please input a valid email</string>
    <string name="error_try_again_later">Oops! something went wrong! please try again later</string>

    <string name="failed_login_title">Login failed!</string>
    <string name="failed_login_description">Please make sure all fields get inputted correctly!</string>

    <string name="failed_register_title">Register failed!</string>
    <string name="failed_register_description">Please make sure all fields get inputted correctly!</string>

    <string name="ok_dialog">OK</string>

    <string name="hint_username">   Username</string>
    <string name="hint_email">   Email</string>
    <string name="hint_password">   Password</string>

    <string name="add_story_book">Add story book</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>

    <string name="template_story_name">story name</string>
    <string name="template_story_description">Some description should be written here…</string>
    <string name="template_story_image">story image</string>

    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_story">List story</string>
    <string name="empty_story">No Story</string>

    <string name="camera_choose_a_picture">Choose a Picture</string>
    <string name="camera_retrofit_failure">Failure on retrofit instance</string>
    <string name="camera_please_input_image_file">Please input the image file.</string>
    <string name="camera_please_input_description">Please input the description.</string>
    <string name="camera_permission_access_failed">Permission access not allowed</string>
    <string name="camera">camera</string>
    <string name="gallery">gallery</string>
    <string name="upload">upload</string>
    <string name="image_preview">Image Preview</string>

    <string name="loading_common_image">Loading Image</string>
    <string name="loading_upload_image">Uploading Loading Image</string>
    <string name="loading_dummy_story_image">Animated loading dummy image</string>

</resources>