<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addStory.AddStoryActivity">

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/icon_image_place_holder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_preview" />

    <Button
        android:id="@+id/cameraButton"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/camera"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/galleryButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/previewImageView"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/galleryButton"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/gallery"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cameraButton"
        app:layout_constraintTop_toBottomOf="@+id/previewImageView" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="24dp"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:gravity="top|start"
        android:hint="@string/template_story_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/galleryButton"
        app:layout_constraintTop_toBottomOf="@+id/galleryButton"
        />

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="74dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/upload"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/descriptionEditText"
        app:layout_constraintEnd_toEndOf="@id/descriptionEditText"
        app:layout_constraintBottom_toBottomOf="parent" />

    <include
        android:id="@+id/loadingUploadStory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        layout="@layout/loading_upload_story"
        />

</androidx.constraintlayout.widget.ConstraintLayout>